--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ POSTGRES_DB=fastapi
 POSTGRES_HOST=postgres
 POSTGRES_HOSTNAME=127.0.0.1
 
-DATABASE_URI = 'postgresql://postgres:password123@postgres/fastapi'
+DATABASE_URL = 'postgresql://postgres:password123@postgres/fastapi'
